# Deflect

apps/: CMakeLists.txt
apps/DesktopStreamer/: MainWindow.cpp  MainWindow.h
apps/SimpleServer/: CMakeLists.txt  main.cpp
apps/SimpleStreamer/: main.cpp
deflect/: ServerWorker.cpp  ServerWorker.h  Socket.cpp  Stream.h  StreamPrivate.cpp  StreamSendWorker.cpp  types.h
doc/: Changelog.md  StereoStreaming.md
